--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.1",
     "graphql": "^14.5.4",
     "graphql-tools": "^4.0.5",
+    "merge-graphql-schemas": "^1.7.0",
     "nodemon": "^1.19.2",
     "pg": "^7.12.1",
     "sequelize": "^5.18.4"
